# ComputerVision

./: .gitignore  README.md
Intel-RealSense-MapDepthToRGB/: main.cpp
Intel-RealSense-PointCloud/: Intel-RealSense-PointCloud.pro  main.cpp
Kinect-Record/: Kinect-Record.pro  main.cpp
Kinect-Record2/: Kinect-Record2.pro  main.cpp
Kinect2-Grabber-libfreenect2/: Kinect2-Grabber-libfreenect2.pro  main.cpp  makefile
Kinect2-ImageRecord-libfreenect2/: Kinect2-ImageRecord-libfreenect2.pro  main.cpp
ORB_SLAM2-IPCam/: main.cpp
ORB_SLAM2-RGBD-Intel-RealSense/: ORB_SLAM2-RGBD-Intel-RealSense.pro  main.cpp
PCD-Transformer/: PCD-Transformer.pro  main.cpp  makefile
PCD-Viewer/: PCD-Viewer.pro  main.cpp  makefile  pcd_helpers.cpp  pcd_helpers.h
PCL-Color-based-Region-Growing-Segmentation/: PCL-Color-based-Region-Growing-Segmentation.pro  main.cpp
PCL-Cylinder-segmentation/: hrnek.pcd  krabice.pcd  krabice2.pcd  main.cpp
PCL-Eucleidan-Cluster/: main.cpp
PCL-Kinect2-Cylinder-segmentation/: main.cpp
PCL-Kinect2-Plane-segmentation/: PCL-Kinect2-Plane-segmentation.pro  main.cpp
PCL-Kinect2-Test/: PCL-Kinect2-Test.pro  main.cpp
PCL-Kinect2-Test2/: PCL-Kinect2-Test2.pro  main.cpp
PCL-Kinect2-Viewer-Filter/: PCL-Kinect2-Viewer-Filter.pro
PCL-Kinect2-Viewer-libfreenect/: PCL-Kinect2-Viewer-libfreenect.pro  main.cpp
PCL-Kinect2-Visualizer-libfreenect2/: PCL-Kinect2-Visualizer-libfreenect2.pro  main.cpp
PCL-Plane-segmentation/: PCL-Plane-segmentation.pro  main.cpp
Porteus/: .gitignore  (+12 more)
RTAB-map-cpp/: .gitignore  CMakeLists.txt  MapBuilder.h  main.cpp
(+36 files in other folders)
